kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: projetdevsecops
    version: "1.0"
  name: projetdevsecops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: projetdevsecops
  strategy: {}
  template:
    metadata:
      labels:
        app: projetdevsecops
    spec:
      containers:
        - name: projetdevsecops
          image: nathanremond/projetdevsecops:2
          imagePullPolicy: Always
          resources: {}
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: projetdevsecops
  name: projetdevsecops
spec:
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: projetdevsecops
